@@ -1,6 +1,10 @@
 2010-07-10  David Reveman  <davidr@novell.com>
 
 	* frameworkelement.cpp:
+	* uielement.cpp: No need to check UIElement::RENDER_PROJECTION
+	flag when computing bounds.
+
+	* frameworkelement.cpp:
 	* uielement.cpp:
 	* rect.cpp:
 	* rect.h: Add Rect::Transform (double *projection).
